--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,11 +1,16 @@
 {
 	"name": "Omusubi C++ Development Environment",
-	"dockerComposeFile": "compose.yaml",
-	"service": "omusubi-dev",
+	"build": {
+		"dockerfile": "Dockerfile",
+		"context": "."
+	},
 	"workspaceFolder": "/workspace",
+	"containerUser": "vscode",
 	"mounts": [
-		"source=${localWorkspaceFolder}/,target=/workspace,type=bind"
+		"source=${localWorkspaceFolder}/,target=/workspace,type=bind",
+		"source=${localEnv:HOME}/.claude,target=/home/vscode/.claude,type=bind,consistency=cached"
 	],
+	"remoteUser": "vscode",
 	"customizations": {
 		"vscode": {
 			"extensions": [
