--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,10 @@ Temporary Items
 *.idx
 compile_commands.json
 
+### Testing Framework ###
+# doctest is auto-downloaded during Docker build
+test/doctest.h
+
 ### Linux ###
 *~
 
